@@ -4,7 +4,8 @@ Changelog
 1.6.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add "postpone" maintenance script status (#13755).
+- Remove obsolete "redundancy_groups" action.
 
 
 1.6.1 (2015-02-09)
